correction version mobile sur la home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -148,9 +148,17 @@
       margin-bottom: 5px;
       font-size: 16px;
     }
-    img.logo {
-      width: 60px;
+    .desktop-display-logo {
+      img.logo {
+        width: 60px;
+      }
     }
+    .mobile-display-logo {
+      img.logo {
+        width: 30px;
+      }
+    }
+
     .listing_ressources {
       margin-bottom: 30px;
       p {
