--- a/app/assets/stylesheets/pages/_popup_nl.scss
+++ b/app/assets/stylesheets/pages/_popup_nl.scss
@@ -10,23 +10,25 @@
       font-size: 28px;
       margin-bottom: 0;
     }
-    p#myModalLabel.modal-title.home-subheader::before {
-      content: '';
-      position: absolute;
-      top: 35px;
-      width: 150px;
-      height: 1px;
-      background-color: $blue;
-      left: 30px;
-    }
-    p#myModalLabel.modal-title.home-subheader::after {
-     content: '';
-     position: absolute;
-     top: 35px;
-     width: 150px;
-     height: 1px;
-     background-color: $blue;
-     right: 30px;
+    #desktop-subscription {
+      p#myModalLabel.modal-title.home-subheader::before {
+        content: '';
+        position: absolute;
+        top: 35px;
+        width: 150px;
+        height: 1px;
+        background-color: $blue;
+        left: 30px;
+      }
+      p#myModalLabel.modal-title.home-subheader::after {
+       content: '';
+       position: absolute;
+       top: 35px;
+       width: 150px;
+       height: 1px;
+       background-color: $blue;
+       right: 30px;
+      }
     }
   }
   .modal-body {
@@ -53,12 +55,21 @@
   #mce-EMAIL.email {
     font-size: 14px;
     font-family: $base-font;
-    width: 350px;
     border-radius: 3px;
     height: 45px;
     border: 1px solid $blue;
     background-color: white;
     color: $gray-light;
+    }
+    #desktop {
+      #mce-EMAIL.email {
+        width: 350px;
+      }
+    }
+    #mobile {
+      #mce-EMAIL.email {
+        width: 200px;
+      }
     }
   }
   .modal-footer {
